# forward_encodings

./: README.md  cloudlab_setup.sh  fetch_data.py  run_experiment_cloudlab_c6420.sh  simple_run_experiment_sf1.sh  simple_setup.sh  ssb_wide_table.sql
src/: CMakeLists.txt  encodings.h  main.cpp  stratified_storage.h
src/benchmarks/: bench_util.h  microbenchmarks.h  ssb-scans_bit.h  ssb-scans_byte.h  tpch-ete.h
src/experiments/: compression.h
src/wrappers/: ssb_wrapper.cpp  ssb_wrapper.h  taxi_wrapper.cpp  taxi_wrapper.h  tpch_wrapper.cpp  tpch_wrapper.h  wrapper_utilities.cpp  wrapper_utilities.h
